Fixes scrollbars on Chrome and new text box field in Room.

--- a/frontend/src/app/components/left-bar/left-bar.component.scss
+++ b/frontend/src/app/components/left-bar/left-bar.component.scss
@@ -7,8 +7,22 @@ mat-sidenav {
     scrollbar-width: none;
 }
 
-mat-sidenav-content::-webkit-scrollbar {
-    display: none;
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #424242;
+}
+
+::-webkit-scrollbar {
+    width: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #303030;
 }
 
 a:hover,
@@ -16,7 +30,8 @@ a:active {
     color: purple;
 }
 
-.logo, .color {
+.logo,
+.color {
     height: 100%;
     width: 100%;
     min-width: 20px;
@@ -24,6 +39,7 @@ a:active {
     clip-path: circle();
 }
 
-.mat-list-item, mat-nav-list {
-    height: 50px!important;
+.mat-list-item,
+mat-nav-list {
+    height: 50px !important;
 }
