--- a/frontend/src/app/components/right-bar/right-bar.component.scss
+++ b/frontend/src/app/components/right-bar/right-bar.component.scss
@@ -5,8 +5,23 @@ mat-sidenav-container, mat-sidenav-content, mat-sidenav {
     scrollbar-width: none;
 }
 
-mat-sidenav-content::-webkit-scrollbar {
-    display: none;
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #424242;
+}
+
+::-webkit-scrollbar {
+    width: 4px;
+    background-color: lightgray;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #303030;
 }
 
 a:hover, a:active{
