--- a/frontend/src/app/room/components/input-field/input-field.component.scss
+++ b/frontend/src/app/room/components/input-field/input-field.component.scss
@@ -3,18 +3,56 @@
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-    background-color: #303030;
     position: absolute;
     bottom: 0;
     right: 0;
     left: 0;
-    width: 90%;
-    height: 50px;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-bottom: 10px;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    margin-bottom: 1%;
 }
 
-p {
+.text-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    max-height: 400px;
+    background-color: #303030;
+    width: 95%;
+    overflow: overlay;
+}
+
+.send-button {
+    margin-left: 10px;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #424242;
+}
+
+::-webkit-scrollbar {
+    width: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #303030;
+}
+
+p, textarea {
     color: #fff;
+}
+.input-field {
+    width: 100%;
+    height: 50%;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-top: -10px;
 }
